# chuot

./: 404.html  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  abridge.css  atom.xml  build.rs  index.html  release-plz.toml  robots.txt  rustfmt.toml  sitemap.xml
.github/: FUNDING.yml  git-cliff.toml  renovate.json
.github/workflows/: doc.yml  release.yml  rust.yml
assets/: Beachball.ron  Beachball.toml  button-down.toml  example.txt  example_dialogue.yarn  lizard.ron  shader.wgsl  threeforms.ron  threeforms.toml
crates/macros/: CHANGELOG.md  Cargo.toml
crates/macros/src/: asset_source.rs  lib.rs
crates/macros/src/embedded/: asset_source.rs  atlas.rs
crates/packer/: CHANGELOG.md  Cargo.toml  README.md
crates/packer/src/: lib.rs
examples/: audio.rs  bitmap.rs  bunnymark.rs  camera.rs  custom_asset.rs  custom_shader.rs  dialogue.rs  draw.rs  falling_sand.rs  font.rs  fps.rs  fullscreen.rs  gamepad.rs  gui.rs  index.html  particles.rs  physics.rs  render-interpolation.rs  render_interpolation.rs  sprite.rs  sprite_new_texture.rs  sprite_pivot.rs  sprite_read_pixels.rs  sprite_rotation.rs  sprite_scale.rs  sprite_sheet.rs  sprite_stacking.rs  sprite_update.rs  test.rs  text.rs  window.rs
examples/audio/: index.html
examples/bunnymark/: index.html
examples/camera/: index.html
examples/custom-asset/: index.html
examples/custom-shader/: index.html
examples/falling-sand/: index.html
examples/fps/: index.html
examples/fullscreen/: index.html
examples/gamepad/: index.html
examples/page/1/: index.html
examples/render-interpolation/: index.html
examples/sprite/: index.html
examples/sprite-new-texture/: index.html
examples/sprite-pivot/: index.html
examples/sprite-read-pixels/: index.html
examples/sprite-rotation/: index.html
examples/sprite-scale/: index.html
examples/sprite-sheet/: index.html
examples/sprite-stacking/: index.html
examples/sprite-update/: index.html
examples/text/: index.html
macros/: Cargo.toml  README.md
macros/src/: asset_source.rs  lib.rs
macros/src/asset_source/: embedded.rs  mod.rs
macros/src/embedded/: asset_source.rs  atlas.rs  mod.rs
page/1/: index.html
run-wasm/: Cargo.toml
run-wasm/src/: main.rs
shaders/: custom_shader_base.wgsl  downscale.wgsl  nearest_neighbor.wgsl  rotation.wgsl  texture.wgsl
src/: audio.rs  bitmap.rs  camera.rs  canvas.rs  config.rs  context.rs  dialogue.rs  font.rs  input.rs  lib.rs  math.rs  pivot.rs  random.rs  sprite.rs  window.rs
src/assets/: audio.rs  embedded.rs  font.rs  hot_reload.rs  image.rs  loader.rs  mod.rs  runtime.rs  source.rs  sprite.rs
src/assets/loadable/: audio.rs  font.rs  mod.rs  shader.rs  sprite.rs
src/assets/loader/: mod.rs  ogg.rs  png.rs  ron.rs  toml.rs  yarn.rs
src/backend/: mod.rs  wgpu.rs
src/context/: audio.rs  camera.rs  font.rs  load.rs  mod.rs  sprite.rs  text.rs
src/context/extensions/: camera.rs  draw.rs  mod.rs  pivot.rs  rotate.rs  scale.rs  shader.rs  translate.rs
src/context/sprite/: draw.rs  mod.rs
src/graphics/: atlas.rs  command.rs  component.rs  context.rs  data.rs  gpu.rs  image.rs  instance.rs  material.rs  mod.rs  pipeline.rs  post_processing.rs  render.rs  state.rs  texture.rs  uniform.rs
src/graphics/shaders/: texture.wgsl  upscale.wgsl
src/gui/: button.rs  label.rs  mod.rs
src/math/: iso.rs  mod.rs  rotation.rs
src/physics/: mod.rs  rigidbody.rs
src/physics/collision/: mod.rs  shape.rs
src/physics/constraint/: distance.rs  mod.rs  penetration.rs
src/sprite/: draw.rs
src/window/: desktop.rs  in_game_profiler.rs  mod.rs  renderer.rs  web.rs
src/window/shaders/: rgba_to_bgra.wgsl
tests/: backend.rs
wasm/: audio.js  audio_bg.wasm  bunnymark.js  bunnymark_bg.wasm  camera.js  camera_bg.wasm  custom_asset.js  custom_asset_bg.wasm  custom_shader.js  custom_shader_bg.wasm  falling_sand.js  falling_sand_bg.wasm  fps.js  fps_bg.wasm  fullscreen.js  fullscreen_bg.wasm  gamepad.js  gamepad_bg.wasm  render_interpolation.js  render_interpolation_bg.wasm  sprite.js  sprite_bg.wasm  sprite_new_texture.js  sprite_new_texture_bg.wasm  sprite_pivot.js  sprite_pivot_bg.wasm  sprite_read_pixels.js  sprite_read_pixels_bg.wasm  sprite_rotation.js  sprite_rotation_bg.wasm  sprite_rotation_bg.wasm.d.ts  sprite_scale.d.ts  sprite_scale.js  sprite_scale_bg.wasm  sprite_scale_bg.wasm.d.ts  sprite_sheet.d.ts  sprite_sheet.js  sprite_sheet_bg.wasm  sprite_stacking.d.ts  sprite_stacking.js  (+5 more)
