[package]
name = "chuot-macros"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Versteeg <t@versteeg.email>"]
license = "AGPL-3.0"
homepage = "https://github.com/tversteeg/chuot"
readme = "README.md"
description = "Procedural macros for the Chuột game engine"
documentation = "https://docs.rs/chuot"
repository = "https://github.com/tversteeg/chuot.git"
rust-version = "1.77.0"
include = ["/src"]

[lib]
proc-macro = true

[features]
embed-assets = ["dep:png", "dep:sprite_dicing", "dep:bytemuck", "dep:packr2", "dep:oxipng"]
hot-reload-assets = []

[dependencies]
litrs = "0.4.1"
quote = "1.0.36"
proc-macro2 = "1.0.83"
walkdir = "2.5.0"

png = { version = "0.17.13", optional = true }
sprite_dicing = { version = "0.1.2", optional = true }
bytemuck = { version = "1.16.0", optional = true }
packr2 = { version = "0.3.3", optional = true }
oxipng = { version = "9.1.1", optional = true }

[lints]
workspace = true
