[package]
name = "chuot-macros"
version = "0.2.2"
edition = "2021"
authors = ["Thomas Versteeg <t@versteeg.email>"]
license = "AGPL-3.0"
homepage = "https://github.com/tversteeg/chuot"
readme = "README.md"
description = "Procedural macros for the Chuột game engine"
documentation = "https://docs.rs/chuot"
repository = "https://github.com/tversteeg/chuot.git"
rust-version = "1.77.0"
include = ["/src"]

[lib]
proc-macro = true

[features]
embed-assets = ["dep:png", "dep:sprite_dicing", "dep:bytemuck", "dep:oxipng", "dep:phf_codegen"]

[dependencies]
litrs = "0.4.1"
quote = "1.0.37"
proc-macro2 = "1.0.88"
walkdir = "2.5.0"

png = { version = "0.17.14", optional = true }
sprite_dicing = { version = "0.1.3", optional = true }
bytemuck = { version = "1.19.0", optional = true }
oxipng = { version = "9.1.2", optional = true }
phf_codegen = { version = "0.11.2", optional = true }

[lints]
workspace = true
