[package]
name = "chuot-packer"
version = "0.2.1"
edition = "2021"
authors = ["Thomas Versteeg <t@versteeg.email>"]
license = "AGPL-3.0"
homepage = "https://github.com/tversteeg/chuot"
readme = "README.md"
description = "2D texture packing for the Chuột game engine"
documentation = "https://docs.rs/chuot"
repository = "https://github.com/tversteeg/chuot.git"
rust-version = "1.77.0"
include = ["/src"]

[lints]
workspace = true
